Skeleton is OK
