# services/Chill/chillout-server/src/main/java/ch/heigvd/amt/chillout/entities/OrderEntity.java
@@ -1,0 +1,28 @@
+package ch.heigvd.amt.chillout.entities;
+
+import lombok.EqualsAndHashCode;
+import lombok.Getter;
+import lombok.Setter;
+
+import javax.persistence.*;
+import java.io.Serializable;
+import java.util.List;
+
+@Getter
+@Setter
+@EqualsAndHashCode
+@Entity
+public class OrderEntity implements Serializable {
+
+    public OrderEntity(){}
+
+    @Id
+    @GeneratedValue(strategy = GenerationType.IDENTITY)
+    private long id;
+
+    @ManyToOne
+    private ClientEntity clientEntity;
+
+    @OneToMany
+    private List<OrderItemEntity> orderItems;
+}
