# services/Chill/chillout-server/src/main/java/ch/heigvd/amt/chillout/entities/ProductEntity.java
@@ -1,26 +1,28 @@
 package ch.heigvd.amt.chillout.entities;
 
+import lombok.EqualsAndHashCode;
+import lombok.Getter;
+import lombok.Setter;
+
 import javax.persistence.Entity;
 import javax.persistence.GeneratedValue;
 import javax.persistence.GenerationType;
 import javax.persistence.Id;
 import java.io.Serializable;
-import lombok.EqualsAndHashCode;
-import lombok.Getter;
-import lombok.Setter;
+import java.math.BigDecimal;
 
 @EqualsAndHashCode
 @Getter
 @Setter
 @Entity
-public class ClientEntity implements Serializable {
+public class ProductEntity implements Serializable {
 
-    public ClientEntity(){}
+    public ProductEntity(){}
 
     @Id
     @GeneratedValue(strategy = GenerationType.IDENTITY)
     private long id;
     private String name;
-    private String username;
-    private boolean isAdmin;
+    private BigDecimal unitPrice;
+    private String description;
 }
